<resources>
    <string name="app_name">Marshmallow UI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="iv_profilePicture_contentDescription">User\'s Profile Picture</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_account_management">Account Management</string>
    <string name="menu_remove_account">Remove account</string>
    <string name="menu_add_account">Add account</string>
    <string name="menu_statistical_overview">Statistical Overview</string>
    <string name="menu_view">View</string>
    <string name="menu_overall_view">Overall view</string>
    <string name="menu_graphical_overview">Graphical Overview</string>
    <string name="menu_trend">Trend</string>
    <string name="menu_overall_trend">Overall trend</string>
    <string name="menu_hashtag_management">Hashtag Management</string>
    <string name="menu_create_new_list">Create new list</string>
    <string name="menu_manage_list">Manage list</string>
    <string name="menu_search_post_by_hashtag">Search post by hashtag</string>
    <string name="menu_post">Post</string>
    <string name="menu_single_post">Single post</string>
    <string name="menu_post_to_all">Post to all</string>
    <string name="menu_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_application_settings">Application settings</string>
    <string name="insert_picture_to_post">Insert picture to post</string>
    <string name="insert_hashtag_list">Insert hashtag list</string>
    <string name="insert_text_here">Insert text here...</string>
    <string name="post_to">Post to:</string>
    <string name="will_be_posted_to">Will be posted to</string>
    <string name="post">Post</string>
    <string name="tumblr">Tumblr</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google Plus</string>
    <string name="facebook">Facebook</string>
    <string name="social_media_logo">Social Media Logo</string>
</resources>
