<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_accounts" />
    </group>

    <item android:title="@string/menu_account_management">
        <menu>
            <item
                android:id="@+id/nav_addAccount"
                android:icon="@drawable/ic_add_profile"
                android:title="@string/menu_add_account" />
            <item
                android:id="@+id/nav_removeAccount"
                android:icon="@drawable/ic_garbage"
                android:title="@string/menu_remove_account" />
        </menu>
    </item>

    <item android:title="@string/menu_statistical_overview">
        <menu>
            <item
                android:id="@+id/nav_view"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_view" />
            <item
                android:id="@+id/nav_viewOverall"
                android:icon="@drawable/ic_application_form"
                android:title="@string/menu_overall_view" />
        </menu>
    </item>

    <item android:title="@string/menu_graphical_overview">
        <menu>
            <item
                android:id="@+id/nav_trend"
                android:icon="@drawable/ic_bar_chart"
                android:title="@string/menu_trend" />
            <item
                android:id="@+id/nav_trendOverall"
                android:icon="@drawable/ic_bar_chart_highlighted"
                android:title="@string/menu_overall_trend" />
        </menu>
    </item>

    <item android:title="@string/menu_hashtag_management">
        <menu>
            <item
                android:id="@+id/nav_createHashtagList"
                android:icon="@drawable/ic_plus"
                android:title="@string/menu_create_new_list" />
            <item
                android:id="@+id/nav_manageHashtagList"
                android:icon="@drawable/ic_list"
                android:title="@string/menu_manage_list" />
            <item
                android:id="@+id/nav_searchByHashtag"
                android:icon="@drawable/ic_magnifier"
                android:title="@string/menu_search_post_by_hashtag" />
        </menu>
    </item>

    <item android:title="@string/menu_post">
        <menu>
            <item
                android:id="@+id/nav_post"
                android:icon="@drawable/ic_pencil"
                android:title="@string/menu_single_post" />
            <item
                android:id="@+id/nav_postToAll"
                android:icon="@drawable/ic_layers"
                android:title="@string/menu_post_to_all" />
        </menu>
    </item>

    <item android:title="@string/menu_application_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
