<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.melanialani.marshmallowui.Fragments.AllPost"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/insert_text_here"
        android:inputType="textLongMessage|textCapSentences|textMultiLine"
        android:maxLines="10"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_hashtag"
            android:contentDescription="@string/insert_hashtag_list" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_picture"
            android:contentDescription="@string/insert_picture_to_post" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            style="@android:style/Widget.Material.Light.Button"/>

    </LinearLayout>

</LinearLayout>
