<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.melanialani.marshmallowui.Fragments.AddAccount"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/add_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/social_media_logo"
            android:src="@drawable/ic_facebook"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/facebook"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/social_media_logo"
            android:src="@drawable/ic_twitter"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/twitter"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_gplus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/social_media_logo"
            android:src="@drawable/ic_google_plus"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/google_plus"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_insta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/social_media_logo"
            android:src="@drawable/ic_instagram"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/instagram"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_tumblr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/social_media_logo"
            android:src="@drawable/ic_tumblr"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/tumblr"/>
    </LinearLayout>

</LinearLayout>
