<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.melanialani.marshmallowui.Fragments.SinglePost"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="@string/insert_text_here"
            android:inputType="textLongMessage|textCapSentences|textMultiLine"
            android:maxLines="8"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_hashtag"
                android:contentDescription="@string/insert_hashtag_list" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_picture"
                android:contentDescription="@string/insert_picture_to_post" />

        </LinearLayout>

    </LinearLayout>

    <!-- |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_weight="6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/post_to"/>

        <LinearLayout
            android:id="@+id/single_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-10dp"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored">

            <ImageView
                android:id="@+id/iv_profilePictureFb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_profilePicture_contentDescription"
                android:src="@drawable/ic_businessman"/>

            <TextView
                android:id="@+id/tv_usernameFb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Erwin Smith"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/single_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-10dp"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored">

            <ImageView
                android:id="@+id/iv_profilePictureTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_profilePicture_contentDescription"
                android:src="@drawable/ic_chef"/>

            <TextView
                android:id="@+id/tv_usernameTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Commander Handsome"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/single_gplus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-10dp"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored">

            <ImageView
                android:id="@+id/iv_profilePictureGPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_profilePicture_contentDescription"
                android:src="@drawable/ic_courier"/>

            <TextView
                android:id="@+id/tv_usernameGPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="erwonmyheart"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/single_insta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-10dp"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored">

            <ImageView
                android:id="@+id/iv_profilePictureInsta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_profilePicture_contentDescription"
                android:src="@drawable/ic_chef"/>

            <TextView
                android:id="@+id/tv_usernameInsta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Levi Ackerman"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/single_tumblr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-10dp"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored">

            <ImageView
                android:id="@+id/iv_profilePictureTumblr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_profilePicture_contentDescription"
                android:src="@drawable/ic_taxi_driver"/>

            <TextView
                android:id="@+id/tv_usernameTumblr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Pouty Captain"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
